--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,26 @@
 *.tar.gz
 *.rar
 
+server
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# 용민 추가
+.class
+*.class
+*.log
+*.ctxt
+.metadata/
+.metadata/*
+.metadata
+.settings/
+.settings/*
+.settings
+build/
+build/*
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
