--- a/pro08/src/main/webapp/WEB-INF/web.xml
+++ b/pro08/src/main/webapp/WEB-INF/web.xml
@@ -13,4 +13,14 @@
 		<param-value>상품조회 상품등록 상품수정 상품삭제</param-value>
 	</context-param>
 	
+	<servlet>
+		<servlet-name>loadingConfig</servlet-name>
+		<servlet-class>sec06.ex02.LoadAppConfig</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>loadConfig</servlet-name>
+		<url-pattern>/loadConfig</url-pattern>
+	</servlet-mapping>
 </web-app>
