--- a/pro10/src/main/webapp/WEB-INF/web.xml
+++ b/pro10/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
   <display-name>pro10</display-name>
+  <filter>
+  	<filter-name>encode</filter-name>
+  	<filter-class>sec03.ex01.EncoderFilter</filter-class>
+  </filter>
+  <filter-mapping>
+	<filter-name>encode</filter-name>
+	<url-pattern>/*</url-pattern>  
+  </filter-mapping>
+  
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
